Introduce BurgerServiceNummer type, move types to central package
Types are reusable for full app, not just in feature package.